<resources>
    <string name="app_name">GameOfLife</string>
    <string name="play">Play</string>
    <string name="clear">Clear</string>
    <string name="random">Random</string>
    <string name="stop">stop</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="input_email">Input Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="input_password">Input Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">back</string>
    <string name="continue_to_sign_in">Continue</string>
</resources>