<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="200dp"
                android:text="@string/input_email" />

            <EditText
                android:id="@+id/sign_up_input_email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints="Email"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/input_password" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints="Password"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints="Confirm Password"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/sign_up" />

            <Button
                android:id="@+id/sign_up_back_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/back" />
        </LinearLayout>

    </ScrollView>
</layout>
